Fixed width resizing on smaller screens Added length limit to studies processing queue Refactored code foe job test

--- a/webapp/src/main/webapp/assets/stylesheets/bs-common-1.0.150320.css
+++ b/webapp/src/main/webapp/assets/stylesheets/bs-common-1.0.150320.css
@@ -59,7 +59,7 @@ a span.link-txt {
 }
 
 .container_24 {
-    min-width: 984px
+    /*min-width: 984px*/
 }
 
 .logo-title {
